# A-VDV-452-Based-Framework-for-Operational-Delay-Analytics

./: .gitignore  README.md  config.yaml  pyproject.toml
data/: soll_stops.csv  vp.csv
export/Plots/: fig1_boxplot_delay_by_hour.tiff  fig2_violin_layovers_by_propulsion.tiff  fig3_heatmap_schedule_1749.tiff  fig45_catalog_umuid_1749.csv  fig4_delay_row0_fgr5.tiff  fig4_delay_row1_fgr2.tiff  fig4_delay_row2_fgr1.tiff  fig4_delay_row3_fgr4.tiff  fig5_delay_row0_fgr5.tiff  fig5_delay_row1_fgr2.tiff  fig5_delay_row2_fgr1.tiff  fig5_delay_row3_fgr4.tiff  qc_overview.csv
src/itsc_delay_pipeline/: __init__.py  cli.py  config.py  io.py  matching.py  osrm.py  pipeline.py  visualize_results.py  viz.py
